# TrackMate

./: .gitignore  ALL_STAGES_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_ENHANCEMENT_SUMMARY.md  ARCHITECTURE_V2_DESIGN.md  ARCHITECTURE_V2_REFINED.md  AWS_INTEGRATION_SUMMARY.md  BUSINESS_APPS_SUMMARY.md  CHANGELOG.md  ENHANCED_ARCHITECTURE_DESIGN.md  FINAL_STRUCTURE.md  MIGRATION_GUIDE.md  MONITORING_V2_COMPLETE.md  PROJECT_CLEANUP_ANALYSIS.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_SUMMARY.md  RUNTIME_CONFIG_GUIDE.md  RUNTIME_CONFIG_SUMMARY.md  STAGE1_COMPLETE.md  STAGE2_3_COMPLETE_SUMMARY.md  mkdocs.yml  pyproject.toml
.github/workflows/: data-plane.yml  integration-tests.yml  monitoring.yml  web.yml
apps/archiver/: main.py
apps/local_api/: main.py
apps/monitoring_sdk/monitoring_sdk/: __init__.py  context.py  emitter.py  models.py
apps/shared_utils/: alerts.py
apps/shared_utils/integrations/: elk.py  local_api.py
apps/web_central/: streamlit_app.py
components/data-plane/: README.md  pyproject.toml
components/data-plane/api/: gateway_api.py
components/data-plane/api/data_adapters/: __init__.py  base.py  elk_adapter.py  s3_adapter.py  timescale_adapter.py
components/data-plane/central-api/central_api/: main.py
components/data-plane/database/scripts/: maintenance.sh  monitor_timescaledb.py
components/data-plane/database/sql/: timescaledb_config.sql  timescaledb_enhancements.sql
components/monitoring/: README.md  pyproject.toml
components/monitoring-v2/: AUTO_METRICS_COLLECTION.md  JOB_ANALYSIS_FEATURE.md  README.md
components/monitoring-v2/examples/: run_demo.sh  sidecar-config.yaml
components/monitoring-v2/protocol/: __init__.py  messages.py
components/monitoring-v2/sdk/: README.md
components/monitoring-v2/sidecar/: Dockerfile  config.py  correlation_engine.py  main.py  requirements.txt  routing_engine.py  tcp_listener.py
components/monitoring/sdk/c/: CMakeLists.txt  README.md  monitoring.pc.in
components/monitoring/sdk/c/examples/: CMakeLists.txt  config.json.example  direct_mode.c  error_example.c  multiprocess_job.c  runtime_config_example.c  simple_job.c
components/monitoring/sdk/c/include/: monitoring.h  monitoring_runtime_config.h
components/monitoring/sdk/c/src/: monitoring.c  runtime_config.c
components/monitoring/sdk/c/src/backends/: file_backend.c  file_backend.h  http_backend.c  http_backend.h
components/monitoring/sdk/c/tests/: CMakeLists.txt  test_monitoring.c
components/monitoring/sdk/java/: README.md  pom.xml
components/monitoring/sdk/java/src/main/java/io/wafermonitor/monitoring/: Backend.java  BackendType.java  EntityType.java  EventKind.java  FilesystemBackend.java  Mode.java  MonitoringConfig.java  MonitoringContext.java  MonitoringEvent.java  MonitoringSDK.java  RuntimeConfigManager.java  SidecarBackend.java  package-info.java
components/monitoring/sdk/java/src/main/java/io/wafermonitor/monitoring/examples/: RuntimeConfigExample.java  SimpleJob.java
components/monitoring/sdk/java/src/main/resources/: monitoring_config_java.yaml.example
components/monitoring/sdk/monitoring_sdk/monitoring_sdk/: __init__.py  aws_helpers.py
components/monitoring/sdk/perl/: README.md
components/monitoring/sdk/perl/examples/: monitoring_config_perl.yaml.example  runtime_config_example.pl  simple_job.pl
components/monitoring/sdk/perl/lib/Monitoring/: RuntimeConfig.pm
components/monitoring/sdk/python/examples/: monitoring_config.yaml.example  runtime_config_example.py
components/monitoring/sdk/python/monitoring_sdk/: __init__.py  config.py  router.py  runtime_config.py
components/monitoring/sdk/python/monitoring_sdk/backends/: __init__.py  base.py  elk.py  filesystem.py  s3.py  sidecar.py
components/monitoring/sdk/r/: DESCRIPTION  README.md
components/monitoring/sdk/r/R/: monitoring.R  runtime_config.R
components/monitoring/sdk/r/examples/: monitoring_config_r.yaml.example  runtime_config_example.R  simple_job.R
components/monitoring/sidecar/: backend_router.py  main_enhanced.py
components/monitoring/sidecar/backends/: __init__.py  managed_api.py
components/monitoring/sidecar/sidecar_agent/: main.py  main_multi_integration.py
components/tests/: docker-compose.integration-tests.yml
components/tests/integration/: README.md  test_business_apps.py
components/tests/integration/c/: CMakeLists.txt  Dockerfile  test_c_integration.sh
components/tests/performance/: test_load.py
components/web/: README.md  pyproject.toml
components/web/local-dashboard/web_local/: streamlit_app.py
deploy/docker/: compose.business.yml  compose.central.yml  compose.local-data.yml  compose.local-web.yml
deploy/docker-compose/: data-plane.yml  monitoring.yml  web.yml
deploy/podman/: README.md
docs/: API.md  AWS_INTEGRATION.md  DEPLOYMENT.md  INTEGRATIONS.md  MULTI_INTEGRATION_GUIDE.md  TIMESCALEDB_OPTIMIZATION.md  index.md
docs/historical/: ENHANCEMENTS_SUMMARY.md  INTEGRATION_TESTS_ARCHITECTURE.md  INTEGRATION_TESTS_QUICK_START.md  INTEGRATION_TESTS_SUMMARY.md  PROJECT_RESTRUCTURE.md  STAGE1_IMPLEMENTATION.md  STAGE1_PROGRESS.md  STAGE2_IMPLEMENTATION.md  TIMESCALEDB_ENHANCEMENTS_SUMMARY.md
examples/: docker-compose.multi-integration.yml
examples/aws/: Dockerfile.ec2  Dockerfile.lambda  Dockerfile.sidecar  IAM-policies.json  QUICK_REFERENCE.md  README.md  docker-compose.aws.yml  ec2_job.py  ecs_task.py  lambda_handler.py  task-definition.json
examples/business_apps/: README.md  build.sh  c_multiprocess_job.c  java_multithread_job.java  perl_multiprocess_job.pl  python_multiprocess_job.py  run_tests.py
examples/integrations/: aws-cloudwatch.json  aws-ecs.json  aws-lambda.json  development.json  monitoring-only.json  production.json
examples/sdk_usage/: README.md  example1_sidecar_mode.py  example2_direct_mode.py  example2_direct_mode.yaml
ops/sql/: schema.sql
shared/shared_utils/: config.py  metrics.py  tracing.py
shared/utils/: __init__.py  logging.py
tests/integration/: test_api_integration.py
tests/unit/: test_aws_integrations.py
(+56 files in other folders)
