[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
[tool.ruff]
line-length = 100
[tool.mypy]
strict = true

[project]
name = "wafer-monitor"
version = "0.2.0"
description = "Mission-critical sidecar monitoring with separated environments"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.5.0",
  "requests>=2.31.0",
  "streamlit>=1.37.0",
  "psutil>=7.1.0",
  "pandas>=2.2.0",
  "pyarrow>=21.0.0",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.0",
  "structlog>=25.4.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-instrumentation-fastapi>=0.50.0",
  "opentelemetry-instrumentation-httpx>=0.50.0",
  "opentelemetry-exporter-otlp>=1.20.0",
  "prometheus-client>=0.19.0",
  "tenacity>=9.1.2",
  "plotly>=6.3.1",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0","pytest-asyncio>=0.23.0","pytest-cov>=4.1.0","coverage>=7.5.0","mypy>=1.10.0","ruff>=0.5.0","black>=24.3.0"]
docs = ["mkdocs>=1.5.3","mkdocs-material>=9.5.0","mkdocs-with-pdf>=0.9.3"]
test = ["pytest>=8.0.0","pytest-asyncio>=0.23.0","pytest-cov>=4.1.0"]
