[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wafer-monitor-data-plane"
version = "0.2.0"
description = "Wafer Monitor - Data Plane Component (APIs + Database)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.5.0",
  "pandas>=2.2.0",
  "pyarrow>=21.0.0",
  "python-dotenv>=1.0.0",
  "structlog>=25.4.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-instrumentation-fastapi>=0.50.0",
  "prometheus-client>=0.19.0",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0","pytest-asyncio>=0.23.0","pytest-cov>=4.1.0","mypy>=1.10.0","ruff>=0.5.0","black>=24.3.0"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

