[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wafer-monitor-monitoring"
version = "0.2.0"
description = "Wafer Monitor - Monitoring Component (SDK + Sidecar)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.5.0",
  "psutil>=7.1.0",
  "python-dotenv>=1.0.0",
  "structlog>=25.4.0",
  "prometheus-client>=0.19.0",
  "tenacity>=9.1.2",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0","pytest-asyncio>=0.23.0","pytest-cov>=4.1.0","mypy>=1.10.0","ruff>=0.5.0","black>=24.3.0"]
aws = ["boto3>=1.34.0"]
integrations = ["requests>=2.31.0"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

