[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wafer-monitor-web"
version = "0.2.0"
description = "Wafer Monitor - Web Component (Dashboards)"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.37.0",
  "httpx>=0.27.0",
  "pydantic>=2.5.0",
  "requests>=2.31.0",
  "pandas>=2.2.0",
  "plotly>=6.3.1",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0","pytest-cov>=4.1.0","mypy>=1.10.0","ruff>=0.5.0","black>=24.3.0"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

